# nanami

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  ruff.toml
.github/workflows/: build-n-push.yaml
app/: main.py
app/config/: accounts.py  database.py  dependencies.py  settings.py
app/libs/: __init__.py
app/libs/pluggy/: pluggy_client.py  session_manager.py
app/libs/pluggy/clients/: items_client.py  transactions_client.py
app/libs/pluggy/models/: auth.py  item.py  transaction.py
app/libs/ynab/: exceptions.py  utils.py  ynab_client.py
app/libs/ynab/clients/: accounts_client.py  budgets_client.py  transactions_client.py
app/libs/ynab/models/: account.py  budget.py  category.py  payee.py  transaction.py
app/models/: __init__.py  account_reference.py  base_sql_model.py  user.py
app/services/: transactions_service.py
libs/ynab/: accounts_client.py  exceptions.py  utils.py  ynab_client.py
libs/ynab/clients/: account.py  budgets_client.py
libs/ynab/models/: budget.py  category.py  payee.py  transaction.py
migrations/: env.py  script.py.mako
migrations/versions/: 77375510cc34_initial_migration.py  7feac44bd192_add_new_fields_to_account_reference.py  a92e1abcd306_add_account_reference.py
tasks/: populate_accounts.py
