[tool.poetry]
name = "nanami"
version = "0.1.0"
description = "Middleman between OpenFinance and YNAB"
authors = ["Gabriel S. <me@souzagab.com>"]
readme = "README.md"
packages = [{include = "*", from="app"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
